# solciety-program-library

./: .gitignore  Anchor.toml  README.md  package-lock.json  package.json
app/: package-lock.json  package.json
app/pages/: index.tsx  reward_schedule.json  solciety_staking_pool.ts
programs/solciety-staking-pool/: Cargo.toml
programs/solciety-staking-pool/src/: lib.rs
