[package]
name = "solciety-staking-pool"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "solciety_staking_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
anchor-debug = []
cpi = ["no-entrypoint"]
default = ["anchor-debug"]

[dependencies]
arrayref = "0.3.6"
anchor-lang = { version = "0.22.0", features = [ "init-if-needed" ] }
anchor-spl = "0.22.0"
mpl-token-metadata = { version = "1.2.3", features = [ "no-entrypoint" ] }
solana-program = "1.8.5"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"